--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,14 +1,14 @@
 :root {
   --white:white;
-  --orange: #dea848;
-  --blue: #5885dc;
-  --blue-light: #88a7ec;
-  --success:black;
-  --gray-0: #dad6d6;
-  --gray-1: #d2cccc;
-  --gray-light: #c4bebe;
-  --gray-3: #6c6666;
-  --gray-dark: #383232;
+  --orange:#FF7A00;
+  --blue: #3a7bc5;
+  --blue-light:#fedede;
+  --success: #0059ff;
+  --gray-0:#f3f3f3;
+  --gray-1:#EBEBEB;
+  --gray-light:#9A9A9A;
+  --gray-3:#464646;
+  --gray-dark:#3C3C3C;
 
   box-sizing: border-box;
 }
