--- a/src/components/chat-list/chat-list.pcss
+++ b/src/components/chat-list/chat-list.pcss
@@ -23,8 +23,7 @@
     }
 
     .chat-list__chats {
-        overflow-y: auto;
-        overflow-x: hidden;
+        overflow: auto;
         list-style-type: none;
         padding-right: 10px;
 
